[gd_scene load_steps=39 format=3 uid="uid://bwd5gl3raybvo"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_6sjgq"]
[ext_resource type="Texture2D" uid="uid://di7jm4q3w0jjk" path="res://Sprites/Player Wall Jump 64x64-Sheet.png" id="2_0mu0t"]
[ext_resource type="Texture2D" uid="uid://ch478i58ato8b" path="res://Graphics/adventurer-v1.5-Sheet.png" id="2_dpg45"]
[ext_resource type="Script" path="res://Scripts/StateMachine.gd" id="3_3veec"]
[ext_resource type="Texture2D" uid="uid://bekhhahb08oim" path="res://Sprites/Player Idle 64x64-Sheet.png" id="3_bhq8e"]
[ext_resource type="Script" path="res://Scripts/States/IdleState.gd" id="4_27klh"]
[ext_resource type="Texture2D" uid="uid://d2aukhidhmlkj" path="res://Sprites/Player Walk 64x64-Sheet.png" id="4_8755e"]
[ext_resource type="Texture2D" uid="uid://bldwgr50wqxhy" path="res://Sprites/Player Jump 64x64-Sheet.png" id="4_tedcu"]
[ext_resource type="Script" path="res://Scripts/States/WalkState.gd" id="5_w3fu1"]
[ext_resource type="Script" path="res://Scripts/States/PauseState.gd" id="6_1s6mr"]
[ext_resource type="Script" path="res://Scripts/States/JumpState.gd" id="6_ifv8m"]
[ext_resource type="Script" path="res://Scripts/States/InAirState.gd" id="7_jkb0k"]
[ext_resource type="Script" path="res://Scripts/States/DiveState.gd" id="8_lsqns"]
[ext_resource type="Script" path="res://Scripts/States/RollState.gd" id="9_6j2xk"]
[ext_resource type="Script" path="res://Scripts/States/WallSlideState.gd" id="10_etbq6"]
[ext_resource type="Script" path="res://Scripts/States/WallJumpState.gd" id="11_jvi23"]
[ext_resource type="AudioStream" uid="uid://b6lolbcueeqhr" path="res://SFX/dive.wav" id="14_jsxmt"]
[ext_resource type="AudioStream" uid="uid://k22efhfala3x" path="res://SFX/jump.wav" id="15_q47r6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jks52"]
atlas = ExtResource("2_0mu0t")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x76pr"]
atlas = ExtResource("3_bhq8e")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_soddw"]
atlas = ExtResource("3_bhq8e")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t33kx"]
atlas = ExtResource("4_tedcu")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqwn6"]
atlas = ExtResource("4_tedcu")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lem7n"]
atlas = ExtResource("2_dpg45")
region = Rect2(200, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbttn"]
atlas = ExtResource("2_dpg45")
region = Rect2(250, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhsxo"]
atlas = ExtResource("2_dpg45")
region = Rect2(300, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_708tx"]
atlas = ExtResource("2_dpg45")
region = Rect2(0, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbo1a"]
atlas = ExtResource("4_8755e")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n14kp"]
atlas = ExtResource("4_8755e")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct8ct"]
atlas = ExtResource("4_8755e")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0yi7"]
atlas = ExtResource("4_8755e")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6bcj"]
atlas = ExtResource("4_8755e")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d5q6"]
atlas = ExtResource("4_8755e")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_62akh"]
atlas = ExtResource("4_8755e")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xjc3"]
atlas = ExtResource("4_8755e")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_10h70"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jks52")
}],
"loop": true,
"name": &"dive",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x76pr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_soddw")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t33kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqwn6")
}],
"loop": true,
"name": &"in_air",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lem7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbttn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhsxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_708tx")
}],
"loop": true,
"name": &"roll",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbo1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n14kp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct8ct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0yi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6bcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d5q6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62akh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xjc3")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2tbhr"]
radius = 16.0
height = 56.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k1qk6"]
size = Vector2(53.0769, 26.1538)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("sprite")]
z_index = 9
scale = Vector2(1.3, 1.3)
collision_layer = 67
collision_mask = 3
script = ExtResource("1_6sjgq")
sprite = NodePath("AnimatedSprite2D")
SPEED = 500.0
jump_height = 250.0
jump_time_to_peak = 0.4
jump_time_to_descend = 0.3

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_10h70")
animation = &"roll"
frame_progress = 0.352283

[node name="OlSprite" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_10h70")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 1)
shape = SubResource("CapsuleShape2D_2tbhr")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
unique_name_in_owner = true
script = ExtResource("3_3veec")
initial_state = NodePath("IdleState")

[node name="PauseState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sprite")]
script = ExtResource("6_1s6mr")
sprite = NodePath("../../AnimatedSprite2D")

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sprite")]
script = ExtResource("4_27klh")
sprite = NodePath("../../AnimatedSprite2D")

[node name="WalkState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sprite")]
script = ExtResource("5_w3fu1")
sprite = NodePath("../../AnimatedSprite2D")

[node name="JumpState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sprite")]
script = ExtResource("6_ifv8m")
sprite = NodePath("../../AnimatedSprite2D")

[node name="InAirState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sprite")]
script = ExtResource("7_jkb0k")
sprite = NodePath("../../AnimatedSprite2D")

[node name="DiveState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sprite")]
script = ExtResource("8_lsqns")
sprite = NodePath("../../AnimatedSprite2D")

[node name="RollState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sprite")]
script = ExtResource("9_6j2xk")
sprite = NodePath("../../OlSprite")

[node name="WallSlideState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sprite")]
script = ExtResource("10_etbq6")
sprite = NodePath("../../OlSprite")

[node name="WallJumpState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sprite")]
script = ExtResource("11_jvi23")
sprite = NodePath("../../OlSprite")

[node name="WallJumpTimer" type="Timer" parent="StateMachine/WallJumpState"]
wait_time = 0.4

[node name="CoyoteTimer" type="Timer" parent="."]

[node name="WallJumpArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallJumpArea"]
position = Vector2(-2.69231, 3.07692)
shape = SubResource("RectangleShape2D_k1qk6")

[node name="SFX" type="Node" parent="."]

[node name="Dive" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("14_jsxmt")
volume_db = -20.0

[node name="Jump" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("15_q47r6")
volume_db = -10.0

[connection signal="timeout" from="StateMachine/WallJumpState/WallJumpTimer" to="." method="_on_wall_jump_timer_timeout"]
[connection signal="timeout" from="StateMachine/WallJumpState/WallJumpTimer" to="StateMachine/WallJumpState" method="_on_wall_jump_timer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="coyote_timeout"]
[connection signal="body_entered" from="WallJumpArea" to="." method="_on_wall_jump_area_body_entered"]
[connection signal="body_exited" from="WallJumpArea" to="." method="_on_wall_jump_area_body_exited"]
